--- a/tasks/common/post_deploy.yml
+++ b/tasks/common/post_deploy.yml
@@ -36,3 +36,8 @@
   ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine {{ item }}"
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_wrapper_scripts_post_deploy
   loop: "{{ steamengine_wrapper_scripts_post_deploy }}"
+
+- name: Start extra services
+  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine {{ item.name }}_start"
+  when: new_build_to_deploy is defined and new_build_to_deploy
+  loop: "{{ steamengine_extra_services }}"
