--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -34,6 +34,15 @@
   tags:
     - steamengine_deploy_nodejs
 
+- include_tasks:
+    file: common/pre_deploy.yml
+    apply:
+      tags:
+        - steamengine_deploy_nodejs
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_nodejs
+
 - name: Fix permissions before updating source
   ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
