--- a/tasks/tomcat/deploy.yml
+++ b/tasks/tomcat/deploy.yml
@@ -145,6 +145,15 @@
   tags:
     - steamengine_deploy_tomcat
 
+- include_tasks:
+    file: common/pre_deploy.yml
+    apply:
+      tags:
+        - steamengine_deploy_tomcat
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_tomcat
+
 - name: Fix permissions before updating source
   ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
