[FIX] drupal php fpm version

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -146,7 +146,7 @@ steamengine_drupal_install_option: >
 # Number of db backup to keep (0 to deactive backup when deploying)
 steamengine_drupal_keep_last_n_backup: 4
 
-# Symfony
+# SYMFONY
 # List of directory we need write permission (modify for symfony < 4)
 steamengine_sf_path_with_write_permission:
   - "var/log"
@@ -165,5 +165,7 @@ steamengine_sf_var_directory: "var"
 steamengine_sf_log_directory: "log"
 # Directory for cache files
 steamengine_sf_cache_directory: "cache"
+
+# DRUPAL & SYMFONY
 # Php fpm version
-steamengine_sf_php_fpm_version: "php7.4-fpm"
+steamengine_php_fpm_service_name: "php7.4-fpm"
