--- a/tasks/common/post_deploy.yml
+++ b/tasks/common/post_deploy.yml
@@ -33,11 +33,11 @@
   loop: "{{ steamengine_persistent_directories }}"
 
 - name: "Run post deploy commands"
-  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine {{ item }}"
+  ansible.builtin.command: "/{{ steamengine_home_path }}/bin/steamengine {{ item }}"
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_wrapper_scripts_post_deploy
   loop: "{{ steamengine_wrapper_scripts_post_deploy }}"
 
 - name: Start extra services
-  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine {{ item.name }}_start"
+  ansible.builtin.command: "/{{ steamengine_home_path }}/bin/steamengine {{ item.name }}_start"
   when: new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_extra_services }}"
