--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -116,7 +116,7 @@
     - steamengine_deploy_sf
 
 - name: Fix permissions before updating source
-  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+  ansible.builtin.command: "/{{ steamengine_home_path }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy and root_path_web_directory.stat.exists
   tags:
     - steamengine_deploy_sf
