--- a/tasks/tomcat/deploy.yml
+++ b/tasks/tomcat/deploy.yml
@@ -155,7 +155,7 @@
     - steamengine_deploy_tomcat
 
 - name: Fix permissions before updating source
-  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+  ansible.builtin.command: "/{{ steamengine_home_path }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_tomcat
@@ -189,7 +189,7 @@
     - steamengine_deploy_tomcat
 
 - name: Fix permissions after updating source
-  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+  ansible.builtin.command: "/{{ steamengine_home_path }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_tomcat
