--- a/tasks/symfony/asserts.yml
+++ b/tasks/symfony/asserts.yml
@@ -2,7 +2,7 @@
 
 - name: Verify build extension
   ansible.builtin.assert:
-    that: (steamengine_build_url | basename | splitext)[-1] == ".zip" or (steamengine_build_url | basename | splitext)[-1] == ".tgz"
+    that: (steamengine_trust_url) or (steamengine_build_url | basename | splitext)[-1] == ".zip" or (steamengine_build_url | basename | splitext)[-1] == ".tgz"
   when: steamengine_build_url is defined and steamengine_build_url
   tags:
     - steamengine_deploy_sf
