--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -113,6 +113,12 @@
   tags:
     - steamengine_deploy_sf
 
+- name: Fix permissions before updating source
+  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+  when: new_build_to_deploy and root_path_web_directory.stat.exists
+  tags:
+    - steamengine_deploy_sf
+
 - name: Clean www directory
   ansible.builtin.file:
     path: "{{ steamengine_project_root_path_web }}"
