--- a/.config/molecule/config.yml
+++ b/.config/molecule/config.yml
@@ -10,11 +10,11 @@ platforms:
     dockerfile: ../docker/Dockerfile-${MOLECULE_DISTRO:-ubuntu1804}
     pre_build_image: false
     privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    tmpfs:
-      - /tmp
-      - /run
+#    volumes:
+#      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+#    tmpfs:
+#      - /tmp
+#      - /run
 provisioner:
   name: ansible
 verifier:
