--- a/tasks/common/delete_project.yml
+++ b/tasks/common/delete_project.yml
@@ -3,7 +3,6 @@
 - name: Check if the service exists
   command: systemctl status "{{ steamengine_project_name }}.service"
   register: service_status
-  ignore_errors: true
 
 - name: Stop the service
   systemd:
@@ -11,7 +10,7 @@
     state: stopped
     enabled: false
     daemon_reload: true
-  when: not service_status.rc == 4
+  when: service_status.rc == 0 or service_status.rc == 3
 
 
 - name: "Delete user {{ steamengine_project_user }}"
