--- a/tasks/drupal/asserts.yml
+++ b/tasks/drupal/asserts.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: Verify build extension
-  assert:
+  ansible.builtin.assert:
     that: (steamengine_build_url | basename | splitext)[1] == ".zip"
   when: steamengine_build_url is defined and steamengine_build_url
   tags:
     - steamengine_deploy_drupal
 
 - name: Verify db dump extension
-  assert:
+  ansible.builtin.assert:
     that:
       - (steamengine_drupal_db_dump_url | basename | splitext)[-1] == ".zip"
   when: steamengine_drupal_db_dump_url is defined and steamengine_drupal_db_dump_url
