--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Download project db dump
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ steamengine_drupal_db_dump_url }}"
     dest: "{{ steamengine_project_root_path }}/db_dump.zip"
     owner: "{{ steamengine_project_user }}"
@@ -13,7 +13,7 @@
     - steamengine_deploy_drupal
 
 - name: Unzip project db dump
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ steamengine_project_root_path }}/db_dump.zip"
     dest: "{{ steamengine_project_root_path }}"
     owner: "{{ steamengine_project_user }}"
@@ -26,7 +26,7 @@
     - steamengine_deploy_drupal
 
 - name: Deploy db dump with drush
-  shell: >
+  ansible.builtin.shell: >
     {{ steamengine_drupal_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
     sql:cli < {{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}
   when: steamengine_drupal_initial_install and not steamengine_drupal_install_from_drush and steamengine_drupal_db_dump_url is defined and steamengine_drupal_db_dump_url
@@ -34,14 +34,14 @@
     - steamengine_deploy_drupal
 
 - name: Delete db dump
-  file:
+  ansible.builtin.file:
     path: "{{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}"
     state: absent
   tags:
     - steamengine_deploy_drupal
 
 - name: Delete archive db dump
-  file:
+  ansible.builtin.file:
     path: "{{ steamengine_project_root_path }}/db_dump.zip"
     state: absent
   tags:
