--- a/tasks/drupal/install_from_drush.yml
+++ b/tasks/drupal/install_from_drush.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Remove settings link
-  file:
+  ansible.builtin.file:
     path: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
     state: absent
   when: not steamengine_drupal_install_use_existing_config
@@ -9,7 +9,7 @@
     - steamengine_deploy_drupal
 
 - name: Remove settings
-  file:
+  ansible.builtin.file:
     path: "{{ steamengine_conf_path }}/settings.php"
     state: absent
   when: not steamengine_drupal_install_use_existing_config
@@ -17,7 +17,7 @@
     - steamengine_deploy_drupal
 
 - name: Install Drupal with drush.
-  command: >
+  ansible.builtin.command: >
     {{ steamengine_drupal_drush_launcher_path }} -r {{ steamengine_project_root_path_web }}
     site-install {{ steamengine_drupal_install_profile }} -y {{ steamengine_drupal_install_option }}
     {{ steamengine_drupal_install_use_existing_config | ternary('--existing-config', '') }}
@@ -26,13 +26,13 @@
     - steamengine_deploy_drupal
 
 - name: "Move setting files to {{ steamengine_conf_path }}"
-  command: "mv {{ steamengine_project_root_path_web }}/web/sites/default/settings.php {{ steamengine_conf_path }}/settings.php"
+  ansible.builtin.command: "mv {{ steamengine_project_root_path_web }}/web/sites/default/settings.php {{ steamengine_conf_path }}/settings.php"
   when: not steamengine_drupal_install_use_existing_config
   tags:
     - steamengine_deploy_drupal
 
 - name: Create configuration link
-  file:
+  ansible.builtin.file:
     state: link
     src: "{{ steamengine_conf_path }}/settings.php"
     dest: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
