feat: add ansible.cfg

--- a/.config/molecule/config.yml
+++ b/.config/molecule/config.yml
@@ -6,8 +6,8 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: ${MOLECULE_DISTRO:-ubuntu1804}
-    dockerfile: ../docker/Dockerfile-${MOLECULE_DISTRO:-ubuntu1804}
+    image: ${MOLECULE_DISTRO:-ubuntu2004}
+    dockerfile: ../docker/Dockerfile-${MOLECULE_DISTRO:-ubuntu2004}
     pre_build_image: false
     privileged: true
     volumes:
@@ -17,6 +17,8 @@ platforms:
       - /run
 provisioner:
   name: ansible
+  env:
+    ANSIBLE_CONFIG: ../../ansible.cfg
 verifier:
   name: testinfra
   options:
