--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,10 @@ steamengine_project_ssh_keys: [ ]
 
 steamengine_logrotate_scripts:
   - name: "{{ steamengine_project_name }}"
-    path: "{{ steamengine_logs_path }}/*.log"
+    path: "{{ item }}"
+    with_items:
+      - "{{ steamengine_logs_path }}/*.log"
+      - "{{ steamengine_logs_path }}/{{ steamengine_sf_external_logs_directory }}/*.log"
     options:
       - daily
       - missingok
