--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,7 @@ steamengine_logrotate_scripts:
     path:
       - "{{ steamengine_logs_path }}/*.log"
       - "{{ steamengine_logs_path }}/{{ steamengine_sf_external_logs_directory }}/*.log"
+      - "{{ steamengine_logs_path }}/{{ steamengine_sf_external_logs_directory }}/*/*.log"
     options:
       - daily
       - missingok
