ADD task to make mandatory checksum befor deploy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.assert:
     that:
       - steamengine_build_checksum is defined
-      - steamengine_ignore_checksum or checksum.strip() != ''
+      - steamengine_ignore_checksum or steamengine_build_checksum.strip() != ''
     fail_msg: "The checksum '{{ steamengine_build_checksum }}' isn't defined."
   tags: always
 
