Create new home directory

--- a/tasks/common/user.yml
+++ b/tasks/common/user.yml
@@ -12,8 +12,8 @@
   ansible.builtin.user:
     name: "{{ steamengine_app_user }}"
     password: "*"
-    home: "{{ steamengine_home_path }}"
-    createhome: false
+    home: "{{ steamengine_home_path }}/.app"
+    createhome: true
     group: "{{ steamengine_app_user }}"
     append: true
 
